--- a/src/components/bootstrap/modal/modal.html
+++ b/src/components/bootstrap/modal/modal.html
@@ -1,25 +1,27 @@
 <quark-component>
-    <div class="modal fade" data-bind="onBind: getElement">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <!-- ko content: 'encabezado' -->
-                    <!-- /ko -->
-                    <button type="button" class="close" data-bind="click: hide">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <!-- ko content: 'cuerpo' -->
-                    <!-- /ko -->
-                </div>
-                <!-- ko hasContent: 'pie' -->
-                    <div class="modal-footer">
-                        <!-- ko content: 'pie' -->
-                        <!-- /ko -->
-                    </div>
-                <!-- /ko -->
-            </div>
+  <div class="modal fade" data-bind="onBind: getElement">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- ko hasContent: 'encabezado' -->
+        <div class="modal-header">
+          <button type="button" data-bind="visible: !dialog()" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <!-- ko content: 'encabezado' -->
+          <!-- /ko -->
         </div>
+        <!-- ko hasContent: 'cuerpo' -->
+        <!-- /ko -->
+        <div class="modal-body">
+          <!-- ko content: 'cuerpo' -->
+          <!-- /ko -->
+        </div>
+        <!-- /ko -->
+        <!-- ko hasContent: 'pie' -->
+        <div class="modal-footer">
+          <!-- ko content: 'pie' -->
+          <!-- /ko -->
+        </div>
+        <!-- /ko -->
+      </div>
     </div>
+  </div>
 </quark-component>
