--- a/src/components/pages/nav-bar/nav-bar.html
+++ b/src/components/pages/nav-bar/nav-bar.html
@@ -17,6 +17,10 @@
             <li data-bind="css: { active: route().page === 'modal-page' }">
 <a href="#Modal">Modal</a></li>
 
+            <li data-bind="css: { active: route().page === 'panel-page' }">
+<a href="#panel">panel</a></li>
+
+
             <!-- [Scaffolded areas will be inserted here. To retain this feature, don't remove this comment.] -->
           </ul>
         </div>
