Mejoras en alert

--- a/src/components/areas/panel-page/panel-page.html
+++ b/src/components/areas/panel-page/panel-page.html
@@ -1,6 +1,6 @@
 <h2>Area de Prueba</h2>
 
-<p>Area de prueba para componentes panel. Inserta aqui los tags para probar
+<p>Area de prueba para componentes Panel. Inserta aqui los tags para probar
 los componentes que estas creando para asi verificar su funcionamiento y permitir
 que futuros usuarios sepan como utilizarlos.</p>
 
