--- a/src/components/pages/nav-bar/nav-bar.html
+++ b/src/components/pages/nav-bar/nav-bar.html
@@ -15,11 +15,14 @@
                 <a href="#">Inicio</a>
             </li>
             <li data-bind="css: { active: route().page === 'modal-page' }">
-<a href="#Modal">Modal</a></li>
-
+              <a href="#Alert">Alert</a>
+            </li>
+            <li data-bind="css: { active: route().page === 'modal-page' }">
+              <a href="#Modal">Modal</a>
+            </li>
             <li data-bind="css: { active: route().page === 'panel-page' }">
-<a href="#panel">panel</a></li>
-
+              <a href="#Panel">Panel</a>
+            </li>
 
             <!-- [Scaffolded areas will be inserted here. To retain this feature, don't remove this comment.] -->
           </ul>
