--- a/src/components/bootstrap/alert/alert.html
+++ b/src/components/bootstrap/alert/alert.html
@@ -1,8 +1,6 @@
 <quark-component>
-    <div data-bind="css: _style, visible: visible">
-        <button type="button" class="close" data-bind="click: hide">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div data-bind="css: _style_, visible: visible">
+        <button type="button" class="close" data-bind="visible: dismissible, click: hide"><span aria-hidden="true">&times;</span></button>
         <!-- ko content: '*' --><!-- /ko -->
     </div>
 </quark-component>
