--- a/src/components/bootstrap/panel/panel.html
+++ b/src/components/bootstrap/panel/panel.html
@@ -1,5 +1,5 @@
 <quark-component>
-  <div class="panel" data-bind="css: _style">
+  <div class="panel" data-bind="css: _style_">
     <!-- ko hasContent: 'encabezado' -->
     <div class="panel-heading">
       <!-- ko content: 'encabezado' -->
