Agrego progress-bar

--- a/src/components/bootstrap/panel/panel.html
+++ b/src/components/bootstrap/panel/panel.html
@@ -1,5 +1,5 @@
 <quark-component>
-  <div class="panel" data-bind="css: _style_">
+  <div class="panel" data-bind="css: _css_">
     <!-- ko hasContent: 'encabezado' -->
     <div class="panel-heading">
       <!-- ko content: 'encabezado' -->
