--- a/src/components/pages/nav-bar/nav-bar.html
+++ b/src/components/pages/nav-bar/nav-bar.html
@@ -23,6 +23,9 @@
             <li data-bind="css: { active: route().page === 'panel-page' }">
               <a href="#Panel">Panel</a>
             </li>
+            <li data-bind="css: { active: route().page === 'progress-page' }">
+              <a href="#Progress">Progress</a>
+            </li>
 
             <!-- [Scaffolded areas will be inserted here. To retain this feature, don't remove this comment.] -->
           </ul>
