--- a/src/components/bootstrap/alert/alert.html
+++ b/src/components/bootstrap/alert/alert.html
@@ -1,5 +1,5 @@
 <quark-component>
-    <div data-bind="css: _style_, visible: visible">
+    <div data-bind="css: _css_, visible: visible">
         <button type="button" class="close" data-bind="visible: dismissible, click: hide"><span aria-hidden="true">&times;</span></button>
         <!-- ko content: '*' --><!-- /ko -->
     </div>
