Hago el panel expandible

--- a/src/components/areas/panel-page/panel-page.html
+++ b/src/components/areas/panel-page/panel-page.html
@@ -4,7 +4,7 @@
 los componentes que estas creando para asi verificar su funcionamiento y permitir
 que futuros usuarios sepan como utilizarlos.</p>
 
-<bt-panel params="color: context;">
+<bt-panel params="{ color: context, expansible: true }">
   <encabezado>
     <h2>Titulo</h2>
   </encabezado>
