Adaptacion de modal para quark 0.7

--- a/src/components/pages/nav-bar/nav-bar.html
+++ b/src/components/pages/nav-bar/nav-bar.html
@@ -14,7 +14,7 @@
             <li data-bind="css: { active: route().page === 'home-page' }">
                 <a href="#">Inicio</a>
             </li>
-            <li data-bind="css: { active: route().page === 'modal-page' }">
+            <li data-bind="css: { active: route().page === 'alert-page' }">
               <a href="#Alert">Alert</a>
             </li>
             <li data-bind="css: { active: route().page === 'modal-page' }">
