--- a/src/components/areas/modal-page/modal-page.html
+++ b/src/components/areas/modal-page/modal-page.html
@@ -1,36 +1,36 @@
-<h2>Area de Prueba</h2>
+<quark-component>
+  <h2>Area de Prueba</h2>
 
-<p>
-  Area de prueba para componentes Modal. Inserta aqui los tags para probar
-  los componentes que estas creando para asi verificar su funcionamiento y permitir
-  que futuros usuarios sepan como utilizarlos.
-</p>
+  <p>
+    Area de prueba para componentes Modal. Inserta aqui los tags para probar
+    los componentes que estas creando para asi verificar su funcionamiento y permitir
+    que futuros usuarios sepan como utilizarlos.
+  </p>
 
-<bt-modal>
-  <!-- vm: 'modal' -->
-  <encabezado>
-    <h2>Modal</h2>
-  </encabezado>
-  <cuerpo>
-    <p>Esta es una ventana modal.</p>
-  </cuerpo>
-  <pie>
-    <button class="btn btn-default" data-bind="click: $child.close">Cancelar</button>
-  </pie>
-</bt-modal>
+  <bt-modal data-bind="import: 'modal'">
+    <encabezado>
+      <h2>Modal</h2>
+    </encabezado>
+    <cuerpo>
+      <p>Esta es una ventana modal.</p>
+    </cuerpo>
+    <pie>
+      <button class="btn btn-default" data-bind="click: $child.close">Cancelar</button>
+    </pie>
+  </bt-modal>
 
-<bt-modal params="dialog: true">
-  <!-- vm: 'dialog' -->
-  <encabezado>
-    <h2>Dialog</h2>
-  </encabezado>
-  <cuerpo>
-    <p>Esta es una ventana dialog.</p>
-  </cuerpo>
-  <pie>
-    <button class="btn btn-default" data-bind="click: $child.close">Cancelar</button>
-  </pie>
-</bt-modal>
+  <bt-modal data-bind="import: 'dialog'" params="dialog: true">
+    <encabezado>
+      <h2>Dialog</h2>
+    </encabezado>
+    <cuerpo>
+      <p>Esta es una ventana dialog.</p>
+    </cuerpo>
+    <pie>
+      <button class="btn btn-default" data-bind="click: $child.close">Cancelar</button>
+    </pie>
+  </bt-modal>
 
-<button data-bind="click: show_modal">Modal</button>
-<button data-bind="click: show_dialog">Dialog</button>
+  <button data-bind="click: show_modal">Modal</button>
+  <button data-bind="click: show_dialog">Dialog</button>
+</quark-component>
