--- a/src/components/bootstrap/modal/modal.html
+++ b/src/components/bootstrap/modal/modal.html
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <!-- ko hasContent: 'encabezado' -->
         <div class="modal-header">
-          <button type="button" data-bind="visible: !dialog()" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <button type="button" data-bind="visible: !dialog" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <!-- ko content: 'encabezado' -->
           <!-- /ko -->
         </div>
