Adaptacion de alert para quark 0.7

--- a/src/components/areas/alert-page/alert-page.html
+++ b/src/components/areas/alert-page/alert-page.html
@@ -1,15 +1,17 @@
-<h2>Area de Prueba</h2>
+<quark-component>
+  <h2>Area de Prueba</h2>
 
-<p>
-  Area de prueba para componentes Alert. Inserta aqui los tags para probar
-  los componentes que estas creando para asi verificar su funcionamiento y permitir
-  que futuros usuarios sepan como utilizarlos.
-</p>
+  <p>
+    Area de prueba para componentes Alert. Inserta aqui los tags para probar
+    los componentes que estas creando para asi verificar su funcionamiento y permitir
+    que futuros usuarios sepan como utilizarlos.
+  </p>
 
-<bt-alert>
-  <p><strong>Hola mundo!</strong> Soy un alert.</p>
-</bt-alert>
+  <bt-alert>
+    <p><strong>Hola mundo!</strong> Soy un alert.</p>
+  </bt-alert>
 
-<bt-alert params="{ dismissible: true, color: 'warning' }">
-  <p>Yo me puedo <strong>cerrar</strog>.</p>
-</bt-alert>
+  <bt-alert params="{ dismissible: true, color: 'warning' }">
+    <p>Yo me puedo <strong>cerrar</strog>.</p>
+  </bt-alert>
+</quark-component>
