Ajustes en el link del navbar

--- a/src/components/navbar/controls/link.html
+++ b/src/components/navbar/controls/link.html
@@ -1,7 +1,7 @@
 <quark-component>
     <div class="nav navbar-nav">
         <li data-bind="css: { active: isActive }">
-            <a data-bind="attr: { href: url }, text: text"></a>
+            <a data-bind="attr: { href: url }, text: model.text"></a>
         </li>
     </div>
 </quark-component>
