Cambio el nombre del pie de pagina del modal y agrego un upContext en los tabs para que no aplique el contenido dentro de un nuevo contexto

--- a/src/components/modal/modal.html
+++ b/src/components/modal/modal.html
@@ -17,7 +17,7 @@
                 </div>
                 <!-- ko hasContent: 'modal-footer' -->
                     <div class="modal-footer">
-                        <!-- ko content: 'pie' -->
+                        <!-- ko content: 'modal-footer' -->
                         <!-- /ko -->
                     </div>
                 <!-- /ko -->
