Ajustes sobre modal que no limpiaba el backdrop porque se eliminaba el componente antes de terminar la animacion

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -6,7 +6,7 @@
                     <div class="modal-header">
                         <!-- ko content: 'modal-heading' -->
                         <!-- /ko -->
-                        <button type="button" class="close" data-bind="click: hide">
+                        <button type="button" class="close" data-bind="click: model.hide">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
