Ajusto el navbar para que entre el icono de optimus

--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -10,7 +10,7 @@
             <!-- ko if: visibleIcon -->
                 <a href="#" class="pull-left" style="margin-left: 15px">
                     <!-- ko ifnot: iconType() == 'font' -->
-                        <img data-bind="attr: { src: iconUrl, href: url }" />
+                        <img style="margin-top: 11px; margin-left: 10px; height:30px;" data-bind="attr: { src: iconUrl, href: url }" />
                     <!-- /ko -->
                 </a>
             <!-- /ko -->
