Propiedad size en el modal para cambiarle el tamaño

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -1,14 +1,14 @@
 <quark-component>
     <div class="modal fade" data-bind="onBind: getElement">
-        <div class="modal-dialog modal-lg">
+        <div class="modal-dialog" data-bind="css: sizeStyle">
             <div class="modal-content">
                 <!-- ko hasContent: 'modal-heading' -->
                     <div class="modal-header">
-                        <!-- ko content: 'modal-heading' -->
-                        <!-- /ko -->
                         <button type="button" class="close" data-bind="click: model.hide">
                             <span aria-hidden="true">&times;</span>
                         </button>
+                        <!-- ko content: 'modal-heading' -->
+                        <!-- /ko -->
                     </div>
                 <!-- /ko -->
                 <div class="modal-body">
