Modificaciones sobre el alert. Muevo elementos del scope al modelo, y agrego una propiedad que muestra la cruz para cerrar el alert o no.

--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -1,8 +1,10 @@
 <quark-component>
-    <div data-bind="css: _style, visible: visible">
-        <button type="button" class="close" data-bind="click: hide">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div data-bind="css: style, visible: model.visible">
+        <!-- ko if: model.hideable -->
+            <button type="button" class="close" data-bind="click: model.hide">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        <!-- /ko -->
         <!-- ko content --><!-- /ko -->
     </div>
 </quark-component>
