agrego parametro "visible" al button

--- a/components/navbar/controls/button.html
+++ b/components/navbar/controls/button.html
@@ -1,5 +1,5 @@
 <quark-component>
-    <div class="nav navbar-nav">
+    <div class="nav navbar-nav" data-bind="visible: visible">
         <li>
             <a href="#" data-bind="click: click">
                 <!-- ko if: icon -->
