Agrego estilos de encabezado a los modal

--- a/components/modal/modal.html
+++ b/components/modal/modal.html
@@ -3,7 +3,7 @@
         <div class="modal-dialog" data-bind="css: sizeStyle">
             <div class="modal-content">
                 <!-- ko hasContent: 'modal-heading' -->
-                    <div class="modal-header">
+                    <div class="modal-header" data-bind="css: headingStyle">
                         <button type="button" class="close" data-bind="click: model.hide">
                             <span aria-hidden="true">&times;</span>
                         </button>
