Elimina padding del icono infobox

--- a/src/components/infobox.component.html
+++ b/src/components/infobox.component.html
@@ -1,6 +1,6 @@
 <!-- quark-component -->
     <div class="info-box">
-        <span class="info-box-icon" style="padding-top: 20px"
+        <span class="info-box-icon"
               data-bind="css: boxIconClass">
             <i data-bind="css: model.fontIcon"></i>
         </span>
