--- a/src/components/box.component.html
+++ b/src/components/box.component.html
@@ -1,25 +1,28 @@
 <quark-component>
     <div class="box" data-bind="onBind: getElement, css: boxClass">
-        <div class="box-header with-border">
-            <h3 class="box-title">
-                <span data-bind="css: model.fontIcon"></span>
-                &nbsp;
-                <span data-bind="text: model.title"></span>
-            </h3>
+        <!-- ko ifnot: model.noheader -->
+            <div class="box-header with-border">
+                <h3 class="box-title">
+                    <span data-bind="css: model.fontIcon"></span>
+                    &nbsp;
+                    <span data-bind="text: model.title"></span>
+                </h3>
 
-            <div class="box-tools pull-right">
-                <!-- ko if: model.expandable -->
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                <!-- /ko -->
-                <!-- ko if: model.removable -->
-                    <button type="button" class="btn btn-box-tool" data-widget="remove">
-                        <i class="fa fa-times"></i>
-                    </button>
-                <!-- /ko -->
+                <div class="box-tools pull-right">
+                    <!-- ko if: model.expandable -->
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                            <i class="fa fa-minus"></i>
+                        </button>
+                    <!-- /ko -->
+                    <!-- ko if: model.removable -->
+                        <button type="button" class="btn btn-box-tool" data-widget="remove">
+                            <i class="fa fa-times"></i>
+                        </button>
+                    <!-- /ko -->
+                </div>
             </div>
-        </div>
+        <!-- /ko -->
+        
         <div class="box-body" style="display: block; color: #000 !important;">
             <!-- ko content -->
             <!-- /ko -->
